# localizations

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  Pipfile  README.md  composer.json  const.py  defaults.yaml  legal-cookie-policy.html  pyproject.toml  schema.py  setup.cfg  template.yaml  validate.py
.circleci/: config.yml  const.py  csv2html.py  validate.py
.codegen/: update_const.py
.github/: auto_assign.yml  config.yml
.travis/: const.py  csv2html.py  csvtomd.py  schema.py  validate.php  validate.py  wplang.py
Belgium/: local.yaml
Bulgaria/: bg.yaml
Croatia/: local.yaml
Cyprus/: local.yaml
Denmark/: dk.yaml
France/: fr.yaml
Georgia/: ge.yaml
Germany/: de.yaml
Greece/: local.yaml
Hungary/: hu.yaml  local.yaml
India/: local.yaml
Ireland/: ie.yaml
Italy/: it.yaml  local.yaml
Latvia/: local.yaml
Lithuania/: local.yaml
Luxembourg/: lu.yaml
Malta/: local.yaml
Moldova/: local.yaml
Montenegro/: me.yaml
Netherlands/: local.yaml  nl.yaml
Norway/: no.yaml
Portugal/: local.yaml  pt.yaml
Romania/: legal-cookie-policy.html  legal-terms-and-conditions.html  local.yaml  ro.yaml
Russia/: ru.yaml
Serbia/: rs.yaml
Slovakia/: sk.yaml
Spain/: es.yaml
Sweden/: se.yaml
Switzerland/: ch.yaml
Turkey/: local.yaml
UK/: legal-privacy-policy.html  legal.md  privacy-policy.html  products-bookstore.md  products-carparts&accessories.md  products-carparts.md  products-clothing.md  products-cosmetics.md  products-electronics.md  products-jewelry.md  products-toys.md  uk.yaml  (+1 more)
(+196 files in other folders)
