[tool.poetry]
name = "localizations"
version = "0.1.0"
description = ""
authors = ["Niteo <inbfo@niteo.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.3"
attrs = "^19.3.0"
beautifulsoup4 = "^4.8.2"
certifi = "^2019.11.28"
chardet = "^3.0.4"
codespell = "^1.16.0"
distlib = "^0.3.0"
docopt = "^0.6.2"
entrypoints = "^0.3"
filelock = "^3.0.12"
flake8 = "^3.7.9"
flake8-assertive = "^1.2.1"
flake8-blind-except = "^0.1.1"
flake8-builtins = "^1.5.2"
flake8-debugger = "^3.2.1"
flake8-deprecated = "^1.3"
flake8-docstrings = "^1.5.0"
flake8-isort = "^2.9.1"
flake8-mock = "^0.3"
flake8-mutable = "^1.2.0"
flake8-plone-hasattr = "^0.2.post0"
flake8-self = "^0.2.2"
flake8-super-call = "^1.0.0"
flake8-tuple = "^0.4.1"
html-linter = "^0.4.0"
identify = "^1.4.13"
idna = "^2.9"
isort = "^4.3.21"
mccabe = "^0.6.1"
mypy-extensions = "^0.4.3"
nodeenv = "^1.3.5"
pre-commit-hooks = "^2.5.0"
pycodestyle = "^2.5.0"
pyflakes = "^2.1.1"
python-dateutil = "^2.8.1"
"ruamel.yaml" = "^0.16.10"
"ruamel.yaml.clib" = "^0.2.0"
six = "^1.14.0"
snowballstemmer = "^2.0.0"
strictyaml = "^1.0.6"
structlog = "^20.1.0"
template-remover = "^0.1.9"
testfixtures = "^6.14.0"
toml = "^0.10.0"
typed-ast = "^1.4.1"
typing-extensions = "^3.7.4"
virtualenv = "^20.0.15"
pre-commit = "^2.2.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
